--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     }
   },
   "scripts": {
-    "test": "npm run compile && ts-node test/index.ts",
-    "watch:test": "npm-watch test"
+    "test": "npm run grammar:compile && jest",
+    "test:watch": "npm-watch test",
     "grammar:compile": "nearleyc src/grammar.ne -o src/grammar.ts",
+    "ts:build": "tsc -p .",
     "build": "npm run clean && npm run grammar:compile && npm run ts:build",
+    "clean": "rimraf lib/*"
   },
   "author": "",
   "license": "ISC",
@@ -24,13 +26,29 @@
     "nearley": "^2.15.1"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.10",
     "@types/nearley": "^2.11.0",
     "@types/node": "^10.12.10",
+    "jest": "^23.6.0",
     "npm-watch": "^0.4.0",
+    "prettier": "^1.15.3",
     "rimraf": "^2.6.2",
     "treeify": "^1.1.0",
+    "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "typescript": "^3.1.6"
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ]
   }
 }
