--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "grammar:compile": "nearleyc src/grammar.ne -o src/grammar.ts",
     "ts:build": "tsc -p .",
     "build": "npm run clean && npm run grammar:compile && npm run ts:build",
-    "clean": "rimraf lib/*"
+    "clean": "rimraf lib/*",
+    "ast-json-schema": "typescript-json-schema --strictNullChecks src/ast.ts MojomNode"
   },
   "author": "",
   "license": "ISC",
@@ -27,9 +28,11 @@
   },
   "devDependencies": {
     "@types/jest": "^23.3.10",
+    "@types/jest-json-schema": "^1.2.0",
     "@types/nearley": "^2.11.0",
     "@types/node": "^10.12.10",
     "jest": "^23.6.0",
+    "jest-json-schema": "^2.0.1",
     "npm-watch": "^0.4.0",
     "prettier": "^1.15.3",
     "rimraf": "^2.6.2",
@@ -37,13 +40,15 @@
     "ts-jest": "^23.10.5",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.6"
+    "typescript": "^3.1.6",
+    "typescript-json-schema": "^0.34.0"
   },
   "jest": {
     "transform": {
       ".(ts|tsx)": "ts-jest"
     },
-    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "testMatch": ["**/__tests__/**/*.ts"],
+    "testPathIgnorePatterns": ["/__utils__/"],
     "moduleFileExtensions": [
       "ts",
       "tsx",
